# 3s-cnes-client

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  pypi.yml  testpypi.yml
docs/: publicacao.md  wsdl-contract.md
examples/: error_handling.py  json_output.py  simple.py
src/async_cnes/: __init__.py
src/async_cnes/client/: __init__.py  client.py
src/async_cnes/contracts/: __init__.py  cnes_service.py  namespaces.py
src/async_cnes/exceptions/: __init__.py
src/async_cnes/models/: __init__.py  base.py  config.py  estabelecimento.py
src/async_cnes/parsers/: __init__.py  estabelecimento.py  soap.py  xml.py
src/async_cnes/transport/: __init__.py  http.py
src/async_cnes/utils/: __init__.py  text.py  validators.py
tests/: fixtures.py  test_client.py  test_contracts.py  test_integration.py  test_parser.py
