[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "async-cnes"
version = "0.1.0"
description = "Cliente Python assíncrono para o serviço SOAP oficial do CNES."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "async-cnes contributors" },
]
keywords = ["cnes", "datasus", "saude", "soap", "async", "httpx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27,<1",
    "lxml>=5,<7",
    "pydantic>=2.6,<3",
    "tenacity>=8.2,<10",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "mypy>=1.10",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "twine>=5",
]

[project.urls]
Homepage = "https://github.com/async-cnes/async-cnes"
Documentation = "https://github.com/async-cnes/async-cnes#readme"
Source = "https://github.com/async-cnes/async-cnes"
Issues = "https://github.com/async-cnes/async-cnes/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
async_cnes = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: testes opcionais que acessam o serviço real do CNES",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "ASYNC",
    "B",
    "C4",
    "E",
    "F",
    "I",
    "N",
    "PERF",
    "PL",
    "RUF",
    "SIM",
    "UP",
    "W",
]
ignore = [
    "PLR0913",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"]
"tests/fixtures.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["async_cnes"]
warn_unreachable = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["lxml.*"]
ignore_missing_imports = true
